# hom

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  hom-architecture.html  hom-system-design.md
.cargo/: config.toml
.claude/: settings.json
.claude/rules/: rust-patterns.md
.claude/skills/rust-rig/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_adapter.md
.github/workflows/: ci.yml  publish.yml  release.yml
Formula/: hom.rb.tmpl
benches/: terminal_render.rs
config/: default.toml
crates/hom-adapters/: Cargo.toml
crates/hom-adapters/src/: claude_code.rs  codex.rs  copilot.rs  gemini.rs  kimi.rs  lib.rs  opencode.rs  pi_mono.rs
crates/hom-adapters/src/sideband/: http.rs  mod.rs  rpc.rs
crates/hom-core/: Cargo.toml
crates/hom-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/hom-db/: Cargo.toml
crates/hom-db/src/: cost.rs  lib.rs  session.rs  workflow.rs
crates/hom-db/src/migrations/: 001_initial.sql
crates/hom-mcp/: Cargo.toml
crates/hom-mcp/src/: handler.rs  lib.rs  protocol.rs  server.rs  tools.rs
crates/hom-plugin/: Cargo.toml
crates/hom-plugin/src/: adapter.rs  ffi.rs  lib.rs  loader.rs
crates/hom-pty/: Cargo.toml
crates/hom-pty/src/: async_reader.rs  lib.rs  manager.rs  remote.rs
crates/hom-terminal/: Cargo.toml
crates/hom-terminal/src/: color_map.rs  fallback_vt100.rs  ghostty.rs  lib.rs
crates/hom-terminal/tests/: async_pipeline.rs
crates/hom-tui/: Cargo.toml
crates/hom-tui/src/: app.rs  command_bar.rs  db_checkpoint.rs  input.rs  layout.rs  lib.rs  pane_render.rs  render.rs  status_rail.rs  workflow_bridge.rs  workflow_progress.rs
crates/hom-web/: Cargo.toml
crates/hom-web/src/: frame.rs  lib.rs  server.rs  viewer.rs
crates/hom-workflow/: Cargo.toml
crates/hom-workflow/src/: checkpoint.rs  condition.rs  dag.rs  executor.rs  lib.rs  parser.rs
docs/reviews/: 2026-04-11-test-coverage-review.md
docs/superpowers/plans/: 2026-04-10-cost-tracking.md  2026-04-10-mcp-server.md  2026-04-10-p2-items.md  2026-04-10-p4-mouse-adapter-tests-ci.md  2026-04-10-phase4-hardening.md  2026-04-10-phase5-blockers.md  2026-04-10-phase6-required.md  2026-04-10-phase7-important.md  2026-04-10-plugin-system.md  2026-04-10-release-readiness.md  2026-04-10-remote-pane.md  2026-04-10-save-restore.md  2026-04-10-sideband-async-bridge.md  2026-04-10-system-design-validation.md  2026-04-10-web-ui.md  2026-04-10-workflow-parallel-execution.md
scripts/: seed-zig-cache.sh  update-homebrew.sh
skills/hom-adapter-development/: SKILL.md
skills/hom-terminal-integration/: SKILL.md
skills/hom-tui-testing/: SKILL.md
skills/hom-workflow-authoring/: SKILL.md
skills/hom-workspace-standards/: SKILL.md
skills/hom-workspace-standards/references/: workspace-architecture.md
skills/rust-rig/: SKILL.md
skills/rust-rig/references/: process-discipline.md  rust-patterns.md
src/: main.rs
workflows/: code-review.yaml  debugging.yaml  documentation.yaml  multi-model-consensus.yaml  parallel-analysis.yaml  plan-execute-validate.yaml  refactor-with-tests.yaml  test-driven-development.yaml
