[package]
name = "hom-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and error definitions for HOM orchestrator"
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true
dirs.workspace = true
tokio.workspace = true
