[package]
name = "hom-db"
version.workspace = true
edition.workspace = true
description = "SQLite storage layer for HOM — workflows, sessions, cost tracking"

[dependencies]
hom-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
