[package]
name = "hom-db"
version.workspace = true
edition.workspace = true
description = "SQLite storage layer for HOM — workflows, sessions, cost tracking"
license.workspace = true
repository.workspace = true

[dependencies]
hom-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
