[package]
name = "hom-pty"
version.workspace = true
edition.workspace = true
description = "PTY management for HOM — spawn, read, write, resize child processes"

[dependencies]
hom-core.workspace = true
portable-pty.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
