[package]
name = "hom-pty"
version.workspace = true
edition.workspace = true
description = "PTY management for HOM — spawn, read, write, resize child processes"
license.workspace = true
repository.workspace = true

[dependencies]
hom-core.workspace = true
portable-pty.workspace = true
tokio.workspace = true
tracing.workspace = true
ssh2.workspace = true
dirs.workspace = true

[dev-dependencies]
anyhow.workspace = true
libc = "0.2"
