[package]
name = "hom-terminal"
version.workspace = true
edition.workspace = true
description = "Terminal emulation layer for HOM (vt100 default, libghostty-rs optional)"

[features]
default = ["vt100-backend"]
# ghostty-backend requires Zig ≥0.15.x at build time.
# Build with: cargo build --features ghostty-backend
ghostty-backend = ["dep:libghostty-vt"]
vt100-backend = ["dep:vt100"]

[dependencies]
hom-core.workspace = true
ratatui.workspace = true
libghostty-vt = { workspace = true, optional = true }
vt100 = { workspace = true, optional = true }

[dev-dependencies]
hom-pty.workspace = true
