[package]
name = "hom-terminal"
version.workspace = true
edition.workspace = true
description = "Terminal emulation layer for HOM (ghostty default, vt100 opt-in fallback)"
license.workspace = true
repository.workspace = true

[features]
default = ["ghostty-backend"]
# vt100-backend is the opt-in fallback for environments without Zig ≥0.15.x.
# Build with: cargo build --no-default-features --features vt100-backend
ghostty-backend = ["dep:libghostty-vt"]
vt100-backend = ["dep:vt100"]

[dependencies]
hom-core.workspace = true
ratatui.workspace = true
libghostty-vt = { workspace = true, optional = true }
vt100 = { workspace = true, optional = true }

[dev-dependencies]
hom-pty.workspace = true
tokio.workspace = true
