[package]
name = "hom-tui"
version.workspace = true
edition.workspace = true
description = "TUI rendering, input routing, and pane layout management for HOM"
license.workspace = true
repository.workspace = true

[features]
# Keep the standalone library/test path portable by default.
# The top-level `hom` binary re-enables `ghostty-backend` as the product default.
default = ["vt100-backend"]
ghostty-backend = ["hom-terminal/ghostty-backend"]
vt100-backend = ["hom-terminal/vt100-backend"]

[dependencies]
hom-core.workspace = true
hom-terminal.workspace = true
hom-pty.workspace = true
hom-adapters.workspace = true
hom-workflow.workspace = true
hom-db.workspace = true
hom-web.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true

[dev-dependencies]
tempfile = "3"
