[package]
name = "hom-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket server for HOM — serves live pane views in a browser"

[dependencies]
hom-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = "0.3"
