[package]
name = "hom-workflow"
version.workspace = true
edition.workspace = true
description = "YAML-driven DAG workflow engine for HOM orchestrator"

[dependencies]
hom-core.workspace = true
async-trait.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
serde_json.workspace = true
minijinja.workspace = true
backoff.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
